Add implemention for Top Secret Split
Move the logic from the handler to the service for reuse it
